--- a/growthbook/sdk/java/FeatureResult.html
+++ b/growthbook/sdk/java/FeatureResult.html
@@ -80,7 +80,7 @@ loadScripts(document, 'script');</script>
 <hr>
 <div class="type-signature"><span class="modifiers">public class </span><span class="element-name type-name-label">FeatureResult&lt;ValueType&gt;</span>
 <span class="extends-implements">extends <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Object.html" title="class or interface in java.lang" class="external-link">Object</a></span></div>
-<div class="block">Results for a <code>IFeatureEvaluator.evaluateFeature(String, GBContext)</code>
+<div class="block">Results for a <code>IFeatureEvaluator.evaluateFeature(String, GBContext, Class)</code>
 
  <ul>
  <li>value (any) - The assigned value of the feature</li>
