--- a/index-all.html
+++ b/index-all.html
@@ -30,6 +30,7 @@ loadScripts(document, 'script');</script>
 <li><a href="growthbook/sdk/java/package-summary.html">Package</a></li>
 <li>Class</li>
 <li><a href="overview-tree.html">Tree</a></li>
+<li><a href="deprecated-list.html">Deprecated</a></li>
 <li class="nav-bar-cell1-rev">Index</li>
 <li><a href="help-doc.html#index">Help</a></li>
 </ul>
@@ -132,20 +133,12 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="growthbook/sdk/java/ExperimentResult.html" class="type-name-link" title="class in growthbook.sdk.java">ExperimentResult</a>&lt;<a href="growthbook/sdk/java/ExperimentResult.html" title="type parameter in ExperimentResult">ValueType</a>&gt; - Class in <a href="growthbook/sdk/java/package-summary.html">growthbook.sdk.java</a></dt>
 <dd>
-<div class="block">The result of running an <a href="growthbook/sdk/java/Experiment.html" title="class in growthbook.sdk.java"><code>Experiment</code></a> given a specific <a href="growthbook/sdk/java/GBContext.html" title="class in growthbook.sdk.java"><code>GBContext</code></a>
-
- 
- inExperiment (boolean) - Whether or not the user is part of the experiment
- variationId (int) - The array index of the assigned variation
- value (any) - The array value of the assigned variation
- hashUsed (boolean) - If a hash was used to assign a variation
- hashAttribute (string) - The user attribute used to assign a variation
- hashValue (string) - The value of that attribute
- featureId (string or null) - The id of the feature (if any) that the experiment came from
- </div>
+<div class="block">The result of an <a href="growthbook/sdk/java/GrowthBook.html#run(growthbook.sdk.java.Experiment)"><code>GrowthBook.run(Experiment)</code></a> call</div>
 </dd>
-<dt><a href="growthbook/sdk/java/ExperimentResult.html#%3Cinit%3E()" class="member-name-link">ExperimentResult()</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/ExperimentResult.html" title="class in growthbook.sdk.java">ExperimentResult</a></dt>
-<dd>&nbsp;</dd>
+<dt><a href="growthbook/sdk/java/ExperimentResult.html#%3Cinit%3E(ValueType,java.lang.Integer,java.lang.Boolean,java.lang.String,java.lang.String,java.lang.String,java.lang.Boolean,java.lang.String,java.lang.String,java.lang.Float,java.lang.Boolean)" class="member-name-link">ExperimentResult(ValueType, Integer, Boolean, String, String, String, Boolean, String, String, Float, Boolean)</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/ExperimentResult.html" title="class in growthbook.sdk.java">ExperimentResult</a></dt>
+<dd>
+<div class="block">The result of running an <a href="growthbook/sdk/java/Experiment.html" title="class in growthbook.sdk.java"><code>Experiment</code></a> given a specific <a href="growthbook/sdk/java/GBContext.html" title="class in growthbook.sdk.java"><code>GBContext</code></a></div>
+</dd>
 <dt><a href="growthbook/sdk/java/ExperimentRunCallback.html" class="type-name-link" title="interface in growthbook.sdk.java">ExperimentRunCallback</a> - Interface in <a href="growthbook/sdk/java/package-summary.html">growthbook.sdk.java</a></dt>
 <dd>
 <div class="block">A callback to be executed with an <a href="growthbook/sdk/java/ExperimentResult.html" title="class in growthbook.sdk.java"><code>ExperimentResult</code></a> whenever an experiment is run.</div>
@@ -157,10 +150,8 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">The feature with a generic value type.</div>
 </dd>
-<dt><a href="growthbook/sdk/java/Feature.html#%3Cinit%3E(java.lang.String)" class="member-name-link">Feature(String)</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/Feature.html" title="class in growthbook.sdk.java">Feature</a></dt>
-<dd>
-<div class="block">Construct a feature with the JSON string</div>
-</dd>
+<dt><a href="growthbook/sdk/java/Feature.html#%3Cinit%3E()" class="member-name-link">Feature()</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/Feature.html" title="class in growthbook.sdk.java">Feature</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/FeatureFetchException.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureFetchException</a> - Exception in <a href="growthbook/sdk/java/package-summary.html">growthbook.sdk.java</a></dt>
 <dd>
 <div class="block">This error is thrown by <a href="growthbook/sdk/java/GBFeaturesRepository.html" title="class in growthbook.sdk.java"><code>GBFeaturesRepository</code></a>
@@ -207,6 +198,14 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="growthbook/sdk/java/FeatureRule.html#%3Cinit%3E()" class="member-name-link">FeatureRule()</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRule.html" title="class in growthbook.sdk.java">FeatureRule</a></dt>
 <dd>&nbsp;</dd>
+<dt><a href="growthbook/sdk/java/Filter.html" class="type-name-link" title="class in growthbook.sdk.java">Filter</a> - Class in <a href="growthbook/sdk/java/package-summary.html">growthbook.sdk.java</a></dt>
+<dd>
+<div class="block">Object used for mutual exclusion and filtering users out of experiments based on random hashes.</div>
+</dd>
+<dt><a href="growthbook/sdk/java/Filter.html#%3Cinit%3E(java.lang.String,java.util.List,java.lang.String,java.lang.Integer)" class="member-name-link">Filter(String, List&lt;BucketRange&gt;, String, Integer)</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/Filter.html" title="class in growthbook.sdk.java">Filter</a></dt>
+<dd>
+<div class="block">Object used for mutual exclusion and filtering users out of experiments based on random hashes.</div>
+</dd>
 <dt><a href="growthbook/sdk/java/FeatureResultSource.html#FORCE" class="member-name-link">FORCE</a> - Enum constant in enum class growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureResultSource.html" title="enum class in growthbook.sdk.java">FeatureResultSource</a></dt>
 <dd>
 <div class="block">When the value is assigned due to a forced condition</div>
@@ -252,6 +251,7 @@ loadScripts(document, 'script');</script>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/Namespace.html#getDeserializer()" class="member-name-link">getDeserializer()</a> - Static method in class growthbook.sdk.java.<a href="growthbook/sdk/java/Namespace.html" title="class in growthbook.sdk.java">Namespace</a></dt>
 <dd>
+<div class="deprecation-block"><span class="deprecated-label">Deprecated.</span></div>
 <div class="block">a Gson deserializer for <a href="growthbook/sdk/java/Namespace.html" title="class in growthbook.sdk.java"><code>Namespace</code></a></div>
 </dd>
 <dt><a href="growthbook/sdk/java/GBFeaturesRepository.html#getFeaturesJson()" class="member-name-link">getFeaturesJson()</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/GBFeaturesRepository.html" title="class in growthbook.sdk.java">GBFeaturesRepository</a></dt>
@@ -284,20 +284,13 @@ loadScripts(document, 'script');</script>
 </dd>
 <dt><a href="growthbook/sdk/java/BucketRange.html#getSerializer()" class="member-name-link">getSerializer()</a> - Static method in class growthbook.sdk.java.<a href="growthbook/sdk/java/BucketRange.html" title="class in growthbook.sdk.java">BucketRange</a></dt>
 <dd>&nbsp;</dd>
-<dt><a href="growthbook/sdk/java/Experiment.html#getSerializer()" class="member-name-link">getSerializer()</a> - Static method in class growthbook.sdk.java.<a href="growthbook/sdk/java/Experiment.html" title="class in growthbook.sdk.java">Experiment</a></dt>
-<dd>
-<div class="block">A Gson serializer for <a href="growthbook/sdk/java/Experiment.html" title="class in growthbook.sdk.java"><code>Experiment</code></a></div>
-</dd>
-<dt><a href="growthbook/sdk/java/ExperimentResult.html#getSerializer()" class="member-name-link">getSerializer()</a> - Static method in class growthbook.sdk.java.<a href="growthbook/sdk/java/ExperimentResult.html" title="class in growthbook.sdk.java">ExperimentResult</a></dt>
-<dd>
-<div class="block">A Gson serializer for <a href="growthbook/sdk/java/ExperimentResult.html" title="class in growthbook.sdk.java"><code>ExperimentResult</code></a></div>
-</dd>
 <dt><a href="growthbook/sdk/java/FeatureResult.html#getSerializer()" class="member-name-link">getSerializer()</a> - Static method in class growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureResult.html" title="class in growthbook.sdk.java">FeatureResult</a></dt>
 <dd>
 <div class="block">a Gson serializer for <a href="growthbook/sdk/java/FeatureResult.html" title="class in growthbook.sdk.java"><code>FeatureResult</code></a></div>
 </dd>
 <dt><a href="growthbook/sdk/java/Namespace.html#getSerializer()" class="member-name-link">getSerializer()</a> - Static method in class growthbook.sdk.java.<a href="growthbook/sdk/java/Namespace.html" title="class in growthbook.sdk.java">Namespace</a></dt>
 <dd>
+<div class="deprecation-block"><span class="deprecated-label">Deprecated.</span></div>
 <div class="block">a Gson serializer for <a href="growthbook/sdk/java/Namespace.html" title="class in growthbook.sdk.java"><code>Namespace</code></a></div>
 </dd>
 <dt><a href="growthbook/sdk/java/GrowthBook.html" class="type-name-link" title="class in growthbook.sdk.java">GrowthBook</a> - Class in <a href="growthbook/sdk/java/package-summary.html">growthbook.sdk.java</a></dt>
@@ -364,10 +357,12 @@ loadScripts(document, 'script');</script>
 <dl class="index">
 <dt><a href="growthbook/sdk/java/Namespace.html" class="type-name-link" title="class in growthbook.sdk.java">Namespace</a> - Class in <a href="growthbook/sdk/java/package-summary.html">growthbook.sdk.java</a></dt>
 <dd>
-<div class="block">A tuple that specifies what part of a namespace an experiment includes.</div>
+<div class="deprecation-block"><span class="deprecated-label">Deprecated.</span></div>
 </dd>
 <dt><a href="growthbook/sdk/java/Namespace.html#%3Cinit%3E()" class="member-name-link">Namespace()</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/Namespace.html" title="class in growthbook.sdk.java">Namespace</a></dt>
-<dd>&nbsp;</dd>
+<dd>
+<div class="deprecation-block"><span class="deprecated-label">Deprecated.</span></div>
+&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/Operator.html#NE" class="member-name-link">NE</a> - Enum constant in enum class growthbook.sdk.java.<a href="growthbook/sdk/java/Operator.html" title="enum class in growthbook.sdk.java">Operator</a></dt>
 <dd>
 <div class="block">$ne</div>
@@ -473,8 +468,11 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">Get a Gson JsonElement of the <a href="growthbook/sdk/java/FeatureResult.html" title="class in growthbook.sdk.java"><code>FeatureResult</code></a></div>
 </dd>
+<dt><a href="growthbook/sdk/java/Filter.html#toJson()" class="member-name-link">toJson()</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/Filter.html" title="class in growthbook.sdk.java">Filter</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/Namespace.html#toJson()" class="member-name-link">toJson()</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/Namespace.html" title="class in growthbook.sdk.java">Namespace</a></dt>
 <dd>
+<div class="deprecation-block"><span class="deprecated-label">Deprecated.</span></div>
 <div class="block">A JSON string for the namespace, resulting in a triple value [id, rangeStart, rangeEnd]</div>
 </dd>
 <dt><a href="growthbook/sdk/java/BucketRange.html#toString()" class="member-name-link">toString()</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/BucketRange.html" title="class in growthbook.sdk.java">BucketRange</a></dt>
@@ -485,9 +483,19 @@ loadScripts(document, 'script');</script>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/FeatureResultSource.html#toString()" class="member-name-link">toString()</a> - Method in enum class growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureResultSource.html" title="enum class in growthbook.sdk.java">FeatureResultSource</a></dt>
 <dd>&nbsp;</dd>
-<dt><a href="growthbook/sdk/java/Namespace.html#toString()" class="member-name-link">toString()</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/Namespace.html" title="class in growthbook.sdk.java">Namespace</a></dt>
+<dt><a href="growthbook/sdk/java/Filter.html#toString()" class="member-name-link">toString()</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/Filter.html" title="class in growthbook.sdk.java">Filter</a></dt>
 <dd>&nbsp;</dd>
+<dt><a href="growthbook/sdk/java/Namespace.html#toString()" class="member-name-link">toString()</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/Namespace.html" title="class in growthbook.sdk.java">Namespace</a></dt>
+<dd>
+<div class="deprecation-block"><span class="deprecated-label">Deprecated.</span></div>
+&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/Operator.html#toString()" class="member-name-link">toString()</a> - Method in enum class growthbook.sdk.java.<a href="growthbook/sdk/java/Operator.html" title="enum class in growthbook.sdk.java">Operator</a></dt>
+<dd>&nbsp;</dd>
+<dt><a href="growthbook/sdk/java/TrackData.html" class="type-name-link" title="class in growthbook.sdk.java">TrackData</a>&lt;<a href="growthbook/sdk/java/TrackData.html" title="type parameter in TrackData">ValueType</a>&gt; - Class in <a href="growthbook/sdk/java/package-summary.html">growthbook.sdk.java</a></dt>
+<dd>
+<div class="block">Used for remote feature evaluation to trigger the <a href="growthbook/sdk/java/TrackingCallback.html" title="interface in growthbook.sdk.java"><code>TrackingCallback</code></a></div>
+</dd>
+<dt><a href="growthbook/sdk/java/TrackData.html#%3Cinit%3E()" class="member-name-link">TrackData()</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/TrackData.html" title="class in growthbook.sdk.java">TrackData</a></dt>
 <dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/TrackingCallback.html" class="type-name-link" title="interface in growthbook.sdk.java">TrackingCallback</a> - Interface in <a href="growthbook/sdk/java/package-summary.html">growthbook.sdk.java</a></dt>
 <dd>
@@ -559,6 +567,12 @@ the order they are declared.</div>
 <div class="block">Returns an array containing the constants of this enum class, in
 the order they are declared.</div>
 </dd>
+<dt><a href="growthbook/sdk/java/VariationMeta.html" class="type-name-link" title="class in growthbook.sdk.java">VariationMeta</a> - Class in <a href="growthbook/sdk/java/package-summary.html">growthbook.sdk.java</a></dt>
+<dd>
+<div class="block">Meta info about an experiment variation</div>
+</dd>
+<dt><a href="growthbook/sdk/java/VariationMeta.html#%3Cinit%3E()" class="member-name-link">VariationMeta()</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/VariationMeta.html" title="class in growthbook.sdk.java">VariationMeta</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/Version.html" class="type-name-link" title="class in growthbook.sdk.java">Version</a> - Class in <a href="growthbook/sdk/java/package-summary.html">growthbook.sdk.java</a></dt>
 <dd>
 <div class="block">Tag for the published GrowthBook SDK version</div>
