--- a/overview-tree.html
+++ b/overview-tree.html
@@ -30,6 +30,7 @@ loadScripts(document, 'script');</script>
 <li>Package</li>
 <li>Class</li>
 <li class="nav-bar-cell1-rev">Tree</li>
+<li><a href="deprecated-list.html">Deprecated</a></li>
 <li><a href="index-all.html">Index</a></li>
 <li><a href="help-doc.html#tree">Help</a></li>
 </ul>
@@ -63,6 +64,7 @@ loadScripts(document, 'script');</script>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Feature.html" class="type-name-link" title="class in growthbook.sdk.java">Feature</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureResult.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureResult</a>&lt;ValueType&gt;</li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/FeatureRule.html" class="type-name-link" title="class in growthbook.sdk.java">FeatureRule</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Filter.html" class="type-name-link" title="class in growthbook.sdk.java">Filter</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.html" class="type-name-link" title="class in growthbook.sdk.java">GBContext</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBContext.GBContextBuilder.html" class="type-name-link" title="class in growthbook.sdk.java">GBContext.GBContextBuilder</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/GBFeaturesRepository.html" class="type-name-link" title="class in growthbook.sdk.java">GBFeaturesRepository</a></li>
@@ -77,6 +79,8 @@ loadScripts(document, 'script');</script>
 </li>
 </ul>
 </li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/TrackData.html" class="type-name-link" title="class in growthbook.sdk.java">TrackData</a>&lt;ValueType&gt;</li>
+<li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/VariationMeta.html" class="type-name-link" title="class in growthbook.sdk.java">VariationMeta</a></li>
 <li class="circle">growthbook.sdk.java.<a href="growthbook/sdk/java/Version.html" class="type-name-link" title="class in growthbook.sdk.java">Version</a></li>
 </ul>
 </li>
