--- a/serialized-form.html
+++ b/serialized-form.html
@@ -30,6 +30,7 @@ loadScripts(document, 'script');</script>
 <li><a href="growthbook/sdk/java/package-summary.html">Package</a></li>
 <li>Class</li>
 <li><a href="overview-tree.html">Tree</a></li>
+<li><a href="deprecated-list.html">Deprecated</a></li>
 <li><a href="index-all.html">Index</a></li>
 <li><a href="help-doc.html#serialized-form">Help</a></li>
 </ul>
@@ -53,6 +54,12 @@ loadScripts(document, 'script');</script>
 <section class="serialized-package-container">
 <h2 title="Package">Package&nbsp;<a href="growthbook/sdk/java/package-summary.html">growthbook.sdk.java</a></h2>
 <ul class="block-list">
+<li>
+<section class="serialized-class-details" id="growthbook.sdk.java.DecryptionUtils.DecryptionException">
+<h3>Exception&nbsp;growthbook.sdk.java.DecryptionUtils.DecryptionException</h3>
+<div class="type-signature">class DecryptionException extends <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/lang/Exception.html" title="class or interface in java.lang" class="external-link">Exception</a> implements <a href="https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/io/Serializable.html" title="class or interface in java.io" class="external-link">Serializable</a></div>
+</section>
+</li>
 <li>
 <section class="serialized-class-details" id="growthbook.sdk.java.FeatureFetchException">
 <h3>Exception&nbsp;<a href="growthbook/sdk/java/FeatureFetchException.html" title="class in growthbook.sdk.java">growthbook.sdk.java.FeatureFetchException</a></h3>
