deploy: 3f17ab8ca45cd43517edf7d2aac7a5a799cc83f1

--- a/index-all.html
+++ b/index-all.html
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css" href="script-dir/jquery-ui.min.css" title="Style">
 <link rel="stylesheet" type="text/css" href="jquery-ui.overrides.css" title="Style">
 <script type="text/javascript" src="script.js"></script>
-<script type="text/javascript" src="script-dir/jquery-3.6.0.min.js"></script>
+<script type="text/javascript" src="script-dir/jquery-3.6.1.min.js"></script>
 <script type="text/javascript" src="script-dir/jquery-ui.min.js"></script>
 </head>
 <body class="index-page">
@@ -49,7 +49,7 @@ loadScripts(document, 'script');</script>
 <div class="header">
 <h1>Index</h1>
 </div>
-<a href="#I:A">A</a>&nbsp;<a href="#I:B">B</a>&nbsp;<a href="#I:C">C</a>&nbsp;<a href="#I:D">D</a>&nbsp;<a href="#I:E">E</a>&nbsp;<a href="#I:F">F</a>&nbsp;<a href="#I:G">G</a>&nbsp;<a href="#I:H">H</a>&nbsp;<a href="#I:I">I</a>&nbsp;<a href="#I:L">L</a>&nbsp;<a href="#I:N">N</a>&nbsp;<a href="#I:O">O</a>&nbsp;<a href="#I:R">R</a>&nbsp;<a href="#I:S">S</a>&nbsp;<a href="#I:T">T</a>&nbsp;<a href="#I:U">U</a>&nbsp;<a href="#I:V">V</a>&nbsp;<br><a href="allclasses-index.html">All&nbsp;Classes&nbsp;and&nbsp;Interfaces</a><span class="vertical-separator">|</span><a href="allpackages-index.html">All&nbsp;Packages</a><span class="vertical-separator">|</span><a href="serialized-form.html">Serialized&nbsp;Form</a>
+<a href="#I:A">A</a>&nbsp;<a href="#I:B">B</a>&nbsp;<a href="#I:C">C</a>&nbsp;<a href="#I:D">D</a>&nbsp;<a href="#I:E">E</a>&nbsp;<a href="#I:F">F</a>&nbsp;<a href="#I:G">G</a>&nbsp;<a href="#I:H">H</a>&nbsp;<a href="#I:I">I</a>&nbsp;<a href="#I:L">L</a>&nbsp;<a href="#I:N">N</a>&nbsp;<a href="#I:O">O</a>&nbsp;<a href="#I:P">P</a>&nbsp;<a href="#I:R">R</a>&nbsp;<a href="#I:S">S</a>&nbsp;<a href="#I:T">T</a>&nbsp;<a href="#I:U">U</a>&nbsp;<a href="#I:V">V</a>&nbsp;<br><a href="allclasses-index.html">All&nbsp;Classes&nbsp;and&nbsp;Interfaces</a><span class="vertical-separator">|</span><a href="allpackages-index.html">All&nbsp;Packages</a><span class="vertical-separator">|</span><a href="serialized-form.html">Serialized&nbsp;Form</a>
 <h2 class="title" id="I:A">A</h2>
 <dl class="index">
 <dt><a href="growthbook/sdk/java/Operator.html#ALL" class="member-name-link">ALL</a> - Enum constant in enum class growthbook.sdk.java.<a href="growthbook/sdk/java/Operator.html" title="enum class in growthbook.sdk.java">Operator</a></dt>
@@ -416,6 +416,13 @@ loadScripts(document, 'script');</script>
 <div class="block">Operator for use in the condition JSON</div>
 </dd>
 </dl>
+<h2 class="title" id="I:P">P</h2>
+<dl class="index">
+<dt><a href="growthbook/sdk/java/StringUtils.html#paddedVersionString(java.lang.String)" class="member-name-link">paddedVersionString(String)</a> - Static method in class growthbook.sdk.java.<a href="growthbook/sdk/java/StringUtils.html" title="class in growthbook.sdk.java">StringUtils</a></dt>
+<dd>&nbsp;</dd>
+<dt><a href="growthbook/sdk/java/StringUtils.html#padLeftZeros(java.lang.String,java.lang.Integer)" class="member-name-link">padLeftZeros(String, Integer)</a> - Static method in class growthbook.sdk.java.<a href="growthbook/sdk/java/StringUtils.html" title="class in growthbook.sdk.java">StringUtils</a></dt>
+<dd>&nbsp;</dd>
+</dl>
 <h2 class="title" id="I:R">R</h2>
 <dl class="index">
 <dt><a href="growthbook/sdk/java/Operator.html#REGEX" class="member-name-link">REGEX</a> - Enum constant in enum class growthbook.sdk.java.<a href="growthbook/sdk/java/Operator.html" title="enum class in growthbook.sdk.java">Operator</a></dt>
@@ -447,6 +454,10 @@ loadScripts(document, 'script');</script>
 <dd>
 <div class="block">when the type is a string</div>
 </dd>
+<dt><a href="growthbook/sdk/java/StringUtils.html" class="type-name-link" title="class in growthbook.sdk.java">StringUtils</a> - Class in <a href="growthbook/sdk/java/package-summary.html">growthbook.sdk.java</a></dt>
+<dd>&nbsp;</dd>
+<dt><a href="growthbook/sdk/java/StringUtils.html#%3Cinit%3E()" class="member-name-link">StringUtils()</a> - Constructor for class growthbook.sdk.java.<a href="growthbook/sdk/java/StringUtils.html" title="class in growthbook.sdk.java">StringUtils</a></dt>
+<dd>&nbsp;</dd>
 <dt><a href="growthbook/sdk/java/GrowthBook.html#subscribe(growthbook.sdk.java.ExperimentRunCallback)" class="member-name-link">subscribe(ExperimentRunCallback)</a> - Method in class growthbook.sdk.java.<a href="growthbook/sdk/java/GrowthBook.html" title="class in growthbook.sdk.java">GrowthBook</a></dt>
 <dd>&nbsp;</dd>
 </dl>
@@ -577,8 +588,32 @@ the order they are declared.</div>
 <dd>
 <div class="block">Tag for the published GrowthBook SDK version</div>
 </dd>
+<dt><a href="growthbook/sdk/java/Operator.html#VERSION_EQ" class="member-name-link">VERSION_EQ</a> - Enum constant in enum class growthbook.sdk.java.<a href="growthbook/sdk/java/Operator.html" title="enum class in growthbook.sdk.java">Operator</a></dt>
+<dd>
+<div class="block">$veq</div>
+</dd>
+<dt><a href="growthbook/sdk/java/Operator.html#VERSION_GT" class="member-name-link">VERSION_GT</a> - Enum constant in enum class growthbook.sdk.java.<a href="growthbook/sdk/java/Operator.html" title="enum class in growthbook.sdk.java">Operator</a></dt>
+<dd>
+<div class="block">$vgt</div>
+</dd>
+<dt><a href="growthbook/sdk/java/Operator.html#VERSION_GTE" class="member-name-link">VERSION_GTE</a> - Enum constant in enum class growthbook.sdk.java.<a href="growthbook/sdk/java/Operator.html" title="enum class in growthbook.sdk.java">Operator</a></dt>
+<dd>
+<div class="block">$vgte</div>
+</dd>
+<dt><a href="growthbook/sdk/java/Operator.html#VERSION_LT" class="member-name-link">VERSION_LT</a> - Enum constant in enum class growthbook.sdk.java.<a href="growthbook/sdk/java/Operator.html" title="enum class in growthbook.sdk.java">Operator</a></dt>
+<dd>
+<div class="block">$vlt</div>
+</dd>
+<dt><a href="growthbook/sdk/java/Operator.html#VERSION_LTE" class="member-name-link">VERSION_LTE</a> - Enum constant in enum class growthbook.sdk.java.<a href="growthbook/sdk/java/Operator.html" title="enum class in growthbook.sdk.java">Operator</a></dt>
+<dd>
+<div class="block">$vlte</div>
+</dd>
+<dt><a href="growthbook/sdk/java/Operator.html#VERSION_NE" class="member-name-link">VERSION_NE</a> - Enum constant in enum class growthbook.sdk.java.<a href="growthbook/sdk/java/Operator.html" title="enum class in growthbook.sdk.java">Operator</a></dt>
+<dd>
+<div class="block">$vne</div>
+</dd>
 </dl>
-<a href="#I:A">A</a>&nbsp;<a href="#I:B">B</a>&nbsp;<a href="#I:C">C</a>&nbsp;<a href="#I:D">D</a>&nbsp;<a href="#I:E">E</a>&nbsp;<a href="#I:F">F</a>&nbsp;<a href="#I:G">G</a>&nbsp;<a href="#I:H">H</a>&nbsp;<a href="#I:I">I</a>&nbsp;<a href="#I:L">L</a>&nbsp;<a href="#I:N">N</a>&nbsp;<a href="#I:O">O</a>&nbsp;<a href="#I:R">R</a>&nbsp;<a href="#I:S">S</a>&nbsp;<a href="#I:T">T</a>&nbsp;<a href="#I:U">U</a>&nbsp;<a href="#I:V">V</a>&nbsp;<br><a href="allclasses-index.html">All&nbsp;Classes&nbsp;and&nbsp;Interfaces</a><span class="vertical-separator">|</span><a href="allpackages-index.html">All&nbsp;Packages</a><span class="vertical-separator">|</span><a href="serialized-form.html">Serialized&nbsp;Form</a></main>
+<a href="#I:A">A</a>&nbsp;<a href="#I:B">B</a>&nbsp;<a href="#I:C">C</a>&nbsp;<a href="#I:D">D</a>&nbsp;<a href="#I:E">E</a>&nbsp;<a href="#I:F">F</a>&nbsp;<a href="#I:G">G</a>&nbsp;<a href="#I:H">H</a>&nbsp;<a href="#I:I">I</a>&nbsp;<a href="#I:L">L</a>&nbsp;<a href="#I:N">N</a>&nbsp;<a href="#I:O">O</a>&nbsp;<a href="#I:P">P</a>&nbsp;<a href="#I:R">R</a>&nbsp;<a href="#I:S">S</a>&nbsp;<a href="#I:T">T</a>&nbsp;<a href="#I:U">U</a>&nbsp;<a href="#I:V">V</a>&nbsp;<br><a href="allclasses-index.html">All&nbsp;Classes&nbsp;and&nbsp;Interfaces</a><span class="vertical-separator">|</span><a href="allpackages-index.html">All&nbsp;Packages</a><span class="vertical-separator">|</span><a href="serialized-form.html">Serialized&nbsp;Form</a></main>
 </div>
 </div>
 </body>
