--- a/growthbook/sdk/java/package-tree.html
+++ b/growthbook/sdk/java/package-tree.html
@@ -88,6 +88,7 @@ loadScripts(document, 'script');</script>
 <ul>
 <li class="circle">growthbook.sdk.java.<a href="ExperimentRunCallback.html" class="type-name-link" title="interface in growthbook.sdk.java">ExperimentRunCallback</a></li>
 <li class="circle">growthbook.sdk.java.<a href="FeatureRefreshCallback.html" class="type-name-link" title="interface in growthbook.sdk.java">FeatureRefreshCallback</a></li>
+<li class="circle">growthbook.sdk.java.<a href="FeatureUsageCallback.html" class="type-name-link" title="interface in growthbook.sdk.java">FeatureUsageCallback</a></li>
 <li class="circle">growthbook.sdk.java.<a href="TrackingCallback.html" class="type-name-link" title="interface in growthbook.sdk.java">TrackingCallback</a></li>
 </ul>
 </section>
